--- a/index.html
+++ b/index.html
@@ -192,7 +192,21 @@ var easy_fancybox_handler = function(){
 				</div>	
             </div>
         </div>
-
+		<div class="white_block">
+			<div class="wrapper">
+				<h2>Заголовок</h2>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias commodi cupiditate atque tempora, possimus quo! Reprehenderit earum explicabo, minima tempora, atque perspiciatis sint nostrum. Accusamus totam, <strong>velit expedita quas iste!</strong>
+				</p>
+				<ul>
+					<li>Lorem ipsum dolor sit amet</li>
+					<li>Lorem ipsum dolor sit amet</li>
+					<li>Lorem ipsum dolor sit amet</li>
+					<li>Lorem ipsum dolor sit amet</li>
+					<li>Lorem ipsum dolor sit amet</li>
+				</ul>
+			</div>
+		</div>
     <div class="wood">
         <div class="wrapper" id="services">
             <span class="heading">услуги</span>
